# python-package-template

./: .gitignore  LICENSE  Pipfile  README.rst  cookiecutter.json  fabfile.py  requirements.txt  run.py
docs/: prompts.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  LICENSE  MANIFEST.in  Pipfile  README.rst  fabfile.py  manifest.yml  pre-push  pyproject.toml  run.py  setup.cfg  setup.py  utils.py
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/setup_requires/pip-9.0.1.dist-info/: RECORD
{{cookiecutter.project_slug}}/setup_requires/pipenv-11.7.4.dist-info/: METADATA  RECORD  metadata.json
{{cookiecutter.project_slug}}/setup_requires/pipenv-11.8.0.dist-info/: METADATA  RECORD  metadata.json
{{cookiecutter.project_slug}}/setup_requires/setuptools-38.5.2.dist-info/: RECORD
{{cookiecutter.project_slug}}/setup_requires/shell_utils-0.1.1.dist-info/: RECORD
{{cookiecutter.project_slug}}/setup_requires/virtualenv-15.1.0.dist-info/: RECORD
{{cookiecutter.project_slug}}/setup_requires/virtualenv_clone-0.3.0.dist-info/: RECORD
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py  fabfile.py  {{cookiecutter.project_slug}}.py
