[metadata]
name = {{ cookiecutter.package_name }}
version = {{ cookiecutter.version }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.rst
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author_email = {{ cookiecutter.email }}
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.package_name }}
license = MIT license
keywords = {{ cookiecutter.package_name }}
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
test_suite = tests
setup_requires = pytest-runner

[flake8]
exclude = docs

[aliases]
test = pytest
